@@ -171,6 +171,7 @@ static const char compile_error_texts[] =
   /* 85 */
   "using \\C is disabled in this PCRE2 library\0"
   "regular expression is too complicated\0" 
+  "lookbehind assertion is too long\0" 
   ;
 
 /* Match-time and UTF error texts are in the same format. */
